previous-versions/1.3/_sources/commandline_tools.rst.txt
Command-line reference
============================

See also the :ref:`tutorial <commandline_tutorial>`.

.. _mhcflurry-predict:

.. autoprogram:: mhcflurry.predict_command:parser
    :prog: mhcflurry-predict

.. _mhcflurry-downloads:

.. autoprogram:: mhcflurry.downloads_command:parser
    :prog: mhcflurry-downloads

.. _mhcflurry-class1-train-allele-specific-models:

.. autoprogram:: mhcflurry.train_allele_specific_models_command:parser
    :prog: mhcflurry-class1-train-allele-specific-models

.. _mhcflurry-calibrate-percentile-ranks:

.. autoprogram:: mhcflurry.calibrate_percentile_ranks_command:parser
    :prog: mhcflurry-calibrate-percentile-ranks

.. _mhcflurry-class1-select-allele-specific-models:

.. autoprogram:: mhcflurry.select_allele_specific_models_command:parser
    :prog: mhcflurry-class1-select-allele-specific-models


