previous-versions/1.6/_sources/commandline_tools.rst.txt
Command-line reference
============================

See also the :ref:`tutorial <commandline_tutorial>`.

.. _mhcflurry-predict:

.. autoprogram:: mhcflurry.predict_command:parser
    :prog: mhcflurry-predict

.. _mhcflurry-predict-scan:

.. autoprogram:: mhcflurry.predict_scan_command:parser
    :prog: mhcflurry-predict-scan

.. _mhcflurry-downloads:

.. autoprogram:: mhcflurry.downloads_command:parser
    :prog: mhcflurry-downloads

.. _mhcflurry-class1-train-allele-specific-models:

.. autoprogram:: mhcflurry.train_allele_specific_models_command:parser
    :prog: mhcflurry-class1-train-allele-specific-models

.. _mhcflurry-class1-select-allele-specific-models:

.. autoprogram:: mhcflurry.select_allele_specific_models_command:parser
    :prog: mhcflurry-class1-select-allele-specific-models

.. _mhcflurry-class1-train-pan-allele-models:

.. autoprogram:: mhcflurry.train_pan_allele_models_command:parser
    :prog: mhcflurry-class1-train-pan-allele-models

.. _mhcflurry-class1-select-pan-allele-models:

.. autoprogram:: mhcflurry.select_pan_allele_models_command:parser
    :prog: mhcflurry-class1-select-pan-allele-models

.. _mhcflurry-class1-train-processing-models:

.. autoprogram:: mhcflurry.train_processing_models_command:parser
    :prog: mhcflurry-class1-train-processing-models

.. _mhcflurry-class1-select-processing-models:

.. autoprogram:: mhcflurry.select_processing_models_command:parser
    :prog: mhcflurry-class1-select-processing-models

.. _mhcflurry-class1-train-presentation-models:

.. autoprogram:: mhcflurry.train_presentation_models_command:parser
    :prog: mhcflurry-class1-train-presentation-models

